<!--
/*
** Copyright (C) 2012 De'vID jonpIn (David Yonge-Mallo)
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<!-- Options Menu for SearchableActivity and EntryActivity.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
          android:title="@string/menu_search_tlh"
          android:icon="@drawable/ic_menu_search"
          android:showAsAction="ifRoom|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/about"
        android:title="@string/menu_about_tlh" />

    <item android:id="@+id/preferences"
        android:title="@string/menu_preferences_tlh" />

    <item android:id="@+id/pronunciation"
        android:title="@string/menu_pronunciation_tlh" />

    <item android:id="@+id/prefixes"
        android:title="@string/menu_prefixes_tlh" />

    <item android:id="@+id/noun_suffixes"
        android:title="@string/menu_noun_suffixes_tlh" />

    <item android:id="@+id/verb_suffixes"
        android:title="@string/menu_verb_suffixes_tlh" />

    <item android:id="@+id/sentences"
        android:title="@string/menu_sentences_tlh">
        <menu>
            <!--
            <item android:id="@+id/empire_union_day"
                android:title="@string/empire_union_day_tlh" />
            <item android:id="@+id/idioms"
                android:title="@string/idioms_tlh" />
            <item android:id="@+id/curse_warfare"
                android:title="@string/curse_warfare_tlh" />
            <item android:id="@+id/nentay"
                android:title="@string/nentay_tlh" />
            <item android:id="@+id/proverbs"
                android:title="@string/proverbs_tlh" />
            <item android:id="@+id/military_celebration"
                android:title="@string/military_celebration_tlh" />
            <item android:id="@+id/rejection"
                android:title="@string/rejection_tlh" />
            -->
            <item android:id="@+id/replacement_proverbs"
                android:title="@string/replacement_proverbs_tlh" />
            <item android:id="@+id/secrecy_proverbs"
                android:title="@string/secrecy_proverbs_tlh" />
            <!--
            <item android:id="@+id/toasts"
                android:title="@string/toasts_tlh" />
            <item android:id="@+id/lyrics"
                android:title="@string/lyrics_tlh" />
            -->
        </menu>
    </item>
</menu>
